<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="设置"
    android:summary="设置"
    >

    <cn.com.mije.frrg.preference.SetPatternPreference
        android:key="pref_key_set_pattern"
        android:persistent="false"
        android:title="@string/pref_title_set_pattern" />

    <SwitchPreferenceCompat
        android:key="pref_key_pattern_visible"
        android:defaultValue="true"
        android:summaryOff="@string/pref_summary_pattern_visible_off"
        android:summaryOn="@string/pref_summary_pattern_visible_on"
        android:title="@string/pref_title_pattern_visible" />

    <cn.com.mije.frrg.preference.ClearPatternPreference
        android:key="pref_key_clear_pattern"
        android:title="@string/pref_title_clear_pattern"
        android:dependency="pref_key_set_pattern"
        android:dialogMessage="@string/pref_dialog_message_clear_pattern" />

</PreferenceScreen>